[gd_scene load_steps=4 format=3 uid="uid://bhfov3tyqihyx"]

[ext_resource type="Texture2D" uid="uid://cu03emtmt6012" path="res://art/starheart.png" id="1_2t7m2"]
[ext_resource type="Script" path="res://title_screen.gd" id="1_e64g3"]
[ext_resource type="FontFile" path="res://fonts/connection_ii/ConnectionII.tres" id="3_3tkai"]

[node name="title_screen" type="CanvasLayer"]
script = ExtResource("1_e64g3")

[node name="Space" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Title" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -60.0
offset_right = 320.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2t7m2")

[node name="MIDIDevicesLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.35625
anchor_top = 0.694444
anchor_right = 0.64375
anchor_bottom = 0.758333
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_3tkai")
text = "No MIDI Devices Found!"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MIDIScanButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.5
offset_top = -31.0
offset_right = 87.5
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_3tkai")
text = "Scan for MIDI Devices"

[connection signal="pressed" from="MIDIScanButton" to="." method="_on_midi_scan_button_pressed"]
